samples/_failures_safe/1761320499_6339a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63c1e558.c: In function ‘process_event’:
./samples/SAFE/__tmp_63c1e558.c:168:5: error: expected declaration or statement at end of input
  168 |     if (sm == NULL) return STATE_ERROR;
      |     ^~
